add_executable(fourway_static fourway_static.cc)
add_executable(fourway_dynamic fourway_dynamic.cc)
add_executable(sixway_static sixway_static.cc)
add_executable(sixway_static_comparison sixway_static_comparison.cc)
add_executable(sixway_dynamic sixway_dynamic.cc)
add_executable(sixway_dynamic_comparison sixway_dynamic_comparison.cc)
add_executable(unknown_32 unknown_32.cc)
